deployment-imagepull.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imagepull-test
  labels:
    app: imagepull-test
  annotations:
    fixora.io/repo-url: "https://github.com/baka126/fixora-test.git"
    fixora.io/repo-path: "deployment-imagepull.yaml"
    fixora.io/vcs-type: "github"
    fixora.io/target-revision: "main"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imagepull-test
  template:
    metadata:
      labels:
        app: imagepull-test
    spec:
      containers:
      - name: typo-container
        image: nginx:1.25-typo-non-existent
