pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: oom-test-4
    annotations:
        fixora.io/repo-url: "https://github.com/baka126/fixora-demo.git"
        fixora.io/repo-path: "pod.yaml"
        fixora.io/vcs-type: "github"
        fixora.io/target-revision: "main"
spec:
    restartPolicy: Never
    containers:
        - name: stress
          image: multiarch/stress
          resources:
            limits:
                memory: "100Mi"
          args: ["stress", "--vm", "1", "--vm-bytes", "500M", "--vm-hang", "1"]
