ingress-broken.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fixora-broken-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    fixora.io/repo-url: "https://github.com/baka126/fixora-demo.git"
    fixora.io/repo-path: "ingress-broken.yaml"
    fixora.io/vcs-type: "github"
    fixora.io/target-revision: "main"
spec:
  rules:
  - host: demo.fixora.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fixora-non-existent-service
            port:
              number: 80
